# 1d_cnn_har

./: .gitignore  README.md  data_preparation_lib.py  plot.py  pyproject.toml  train.py  training_lib.py
